# solartagger

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  schema.sql  submit.py
.github/workflows/: build.yml
static/: main.css
templates/: _base.html  app.html  index.html
