[tool.poetry]
name = "solartag"
version = "0.1.0"
description = ""
authors = ["Russ Garrett <russ@garrett.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
databases = "^0.3.2"
authlib = "^0.14.3"
httpx = "^0.15.5"
uvicorn = "^0.12.1"
itsdangerous = "^1.1.0"
asyncpg = "^0.21.0"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"
osmapi = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
